RESOLVED FIXED 54305
GIFImageDecoder::setSize() tries to override the superclass method but fails
https://bugs.webkit.org/show_bug.cgi?id=54305
Summary GIFImageDecoder::setSize() tries to override the superclass method but fails
Nico Weber
Reported 2011-02-11 12:33:31 PST
GIFImageDecoder::setSize() tries to override the superclass method but fails
Attachments
Patch (2.43 KB, patch)
2011-02-11 12:34 PST, Nico Weber
no flags
Patch (2.56 KB, patch)
2011-02-21 15:13 PST, Nico Weber
no flags
Nico Weber
Comment 1 2011-02-11 12:34:37 PST
Nico Weber
Comment 2 2011-02-11 12:34:53 PST
Found by a new clang warning: In file included from /b/build/slave/mac_clang/build/src/third_party/WebKit/Source/WebCore/WebCore.gyp/../platform/image-decoders/ImageDecoder.cpp:30: ../platform/image-decoders/gif/GIFImageDecoder.h:48:22:error: 'WebCore::GIFImageDecoder::setSize' hides overloaded virtual function [-Woverloaded-virtual] virtual bool setSize(int width, int height); ^ In file included from /b/build/slave/mac_clang/build/src/third_party/WebKit/Source/WebCore/WebCore.gyp/../platform/image-decoders/ImageDecoder.cpp:24: ../platform/image-decoders/ImageDecoder.h:274:22: note: hidden overloaded virtual function 'WebCore::ImageDecoder::setSize' declared here virtual bool setSize(unsigned width, unsigned height) ^ 1 error generated.
Nico Weber
Comment 3 2011-02-11 12:36:58 PST
The only thing the subclass does is initialize caches if necessary. So according to the guideline in bug 54301 comment 6, this means this patch doesn't need a patch (if I got the guideline right).
Nico Weber
Comment 4 2011-02-11 12:38:24 PST
*doesn't need a test
WebKit Review Bot
Comment 5 2011-02-11 12:38:49 PST
Nico Weber
Comment 6 2011-02-11 12:47:18 PST
Comment on attachment 82160 [details] Patch r- for bot failure. Won't be able to clean this up in the near future.
WebKit Review Bot
Comment 7 2011-02-11 15:19:23 PST
Nico Weber
Comment 8 2011-02-21 15:13:40 PST
Kent Tamura
Comment 9 2011-02-21 17:38:30 PST
Comment on attachment 83223 [details] Patch looks reasonable.
WebKit Commit Bot
Comment 10 2011-02-21 19:57:44 PST
Comment on attachment 83223 [details] Patch Clearing flags on attachment: 83223 Committed r79282: <http://trac.webkit.org/changeset/79282>
WebKit Commit Bot
Comment 11 2011-02-21 19:57:49 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.