2011-02-21  Nico Weber  <thakis@chromium.org>

Reviewed by Kent Tamura.

        GIFImageDecoder::setSize() tries to override the superclass method but fails
        https://bugs.webkit.org/show_bug.cgi?id=54305

        The superclass uses unsigned instead of int for its parameters, so
        GIFImageDecoder::setSize() was an overload, not an override.

        * platform/image-decoders/gif/GIFImageDecoder.cpp:
        (WebCore::GIFImageDecoder::setSize):
        * platform/image-decoders/gif/GIFImageDecoder.h:

Canonical link: https://commits.webkit.org/69205@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79282 268f45cc-cd09-0410-ab3c-d52691b4dbfc